--- a/school/templates/viewCourse.html
+++ b/school/templates/viewCourse.html
@@ -5,14 +5,14 @@
 <div class = "container">
   
   <br/> <br/> <br/>
-       courseName = {{courseName}}
+       <!-- courseName = {{courseName}} -->
        <table class="table table-striped">
           <thead>
             <tr>
               <th scope="col">Course</th>
               <th scope="col">Student</th>
-              <th scope="col">Attendance Upto Today</th>
-              <th scope="col">Total Attendance Upto CourseEndDate</th>
+              <th scope="col">Current Attendance</th>
+              <th scope="col">Total Attendance</th>
             </tr>
           </thead>
           <tbody>
