--- a/school/templates/base_template.html
+++ b/school/templates/base_template.html
@@ -37,7 +37,8 @@
 				</ul>
 				{% if user.is_authenticated %}
 					<a href="{% url 'logout' %}"><button class="btn btn-warning my-2 my-sm-0" type="submit">Logout as {{user.username}}</button></a>
-					
+				{% else %}
+				<a href="{% url 'login' %}"><button class="btn btn-success my-2 my-sm-0" type="submit">Login</button></a>
 				</a>
 				{% endif %}
 			</div>
