--- a/school/templates/teacher.html
+++ b/school/templates/teacher.html
@@ -9,16 +9,17 @@
 				<table class="table table-striped">
 					<thead>
 						<tr>
-							<th scope="col">Teacher</th>
+							<th scope="col">Teacher1</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<!-- {{ user.username }} -->{% for teacher in teachers %} {% if user.username|stringformat:"s" == teacher.name|stringformat:"s" %}
 							<th scope="row">
-								<button class="btn btn-success"> Currently Logged In Teacher {{teacher.name}}</button>
+								<!-- <button class="btn btn-success"> Currently Logged In Teacher {{user.username}}</button> -->
+								content
 							</th>
-						</tr> {% endif %} {% endfor %} </tbody>
+						</tr>  
+					</tbody>
 				</table>
 			</div>
 		</div>
